// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationProcessContainer when position is found when on Review Step should render correctly 1`] = `
<div
  className="application_process_container"
>
  <div
    className="application_process_container__wrapper"
  >
    <Connect(ApplicationProgressWidget) />
  </div>
  <Connect(ApplicationReviewContainer)
    positionId="firstPositionId"
  />
</div>
`;

exports[`ApplicationProcessContainer when position is found when on Submitted Step should render correctly 1`] = `
<div
  className="application_process_container"
>
  <div
    className="application_process_container__wrapper"
  >
    <Connect(ApplicationProgressWidget) />
  </div>
  <ApplicationSubmissionContainer />
</div>
`;

exports[`ApplicationProcessContainer when position is found when on User Documents Step should render correctly 1`] = `
<div
  className="application_process_container"
>
  <div
    className="application_process_container__wrapper"
  >
    <Connect(ApplicationProgressWidget) />
  </div>
  <Connect(ApplicationUserDocumentsContainer) />
</div>
`;

exports[`ApplicationProcessContainer when position is found when on User Info Step should render correctly 1`] = `
<div
  className="application_process_container"
>
  <div
    className="application_process_container__wrapper"
  >
    <Connect(ApplicationProgressWidget) />
  </div>
  <Connect(ApplicationUserContainer) />
</div>
`;
